[gd_scene load_steps=5 format=3 uid="uid://miigpbg6n0xu"]

[ext_resource type="Script" path="res://core/gui/inventory/inventory_ui.gd" id="1_od8su"]
[ext_resource type="Texture2D" uid="uid://brav6pjmgim1s" path="res://core/characters/player/player.png" id="2_5d7hq"]
[ext_resource type="PackedScene" uid="uid://cs8roo38svwit" path="res://core/gui/inventory/inventory_button.tscn" id="4_f5bdh"]
[ext_resource type="PackedScene" uid="uid://cno2fsp8ar0hf" path="res://core/gui/item_description/item_description.tscn" id="5_rl3q4"]

[node name="Inventory" type="Control" node_paths=PackedStringArray("equipped_armor")]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_od8su")
equipped_armor = NodePath("CanvasLayer/Background/EquippedArmorButton")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
custom_minimum_size = Vector2(1440, 810)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="InventoryBackgroundHighlight" type="ColorRect" parent="CanvasLayer/Background"]
layout_mode = 0
offset_left = 41.0
offset_top = 41.0
offset_right = 559.0
offset_bottom = 559.0
color = Color(0.545098, 0.545098, 0.545098, 1)

[node name="InventoryBackgroundShadow" type="ColorRect" parent="CanvasLayer/Background"]
layout_mode = 0
offset_left = 38.0
offset_top = 38.0
offset_right = 556.0
offset_bottom = 556.0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="InventoryBackground" type="ColorRect" parent="CanvasLayer/Background"]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 558.0
offset_bottom = 558.0
color = Color(0.215686, 0.215686, 0.215686, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Background"]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 556.0
offset_bottom = 556.0

[node name="Inventory" type="GridContainer" parent="CanvasLayer/Background/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 35
theme_override_constants/v_separation = 13
columns = 5
metadata/_edit_group_ = true

[node name="Player" type="Control" parent="CanvasLayer/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 360.0
offset_right = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerSprite" type="Sprite2D" parent="CanvasLayer/Background/Player"]
scale = Vector2(15, 15)
texture = ExtResource("2_5d7hq")

[node name="WeaponSprite" type="Sprite2D" parent="CanvasLayer/Background/Player/PlayerSprite"]
position = Vector2(0, 2)
scale = Vector2(0.5, 0.5)

[node name="EquippedWeaponButton" parent="CanvasLayer/Background" instance=ExtResource("4_f5bdh")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 480.0
offset_top = -37.5
offset_right = 555.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1)

[node name="LoadedAmmo" type="Button" parent="CanvasLayer/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 580.0
offset_top = -37.5
offset_right = 630.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
expand_icon = true

[node name="ItemDescription" parent="CanvasLayer/Background" instance=ExtResource("5_rl3q4")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -365.0
offset_right = 207.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="EquippedArmorButton" parent="CanvasLayer/Background" instance=ExtResource("4_f5bdh")]
layout_mode = 2
offset_left = 1620.0
offset_top = 137.0
offset_right = 1695.0
offset_bottom = 212.0
scale = Vector2(1, 1)

[node name="Weight" type="Label" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 97.0
offset_right = 184.0
offset_bottom = 120.0
horizontal_alignment = 2

[node name="MaxWeight" type="Label" parent="."]
layout_mode = 0
offset_left = 184.0
offset_top = 97.0
offset_right = 224.0
offset_bottom = 120.0
